--- a/collatz-demo.html
+++ b/collatz-demo.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Collatz Conjecture Visualizer - Brandon Capparelli</title>
-    <link rel="icon" type="image/jpeg" href="assets/me.jpeg">
+    <link rel="icon" type="image/jpeg" href="Assets/me.jpeg">
     <link rel="stylesheet" href="styles.css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
