--- a/collatz-demo.html
+++ b/collatz-demo.html
@@ -12,7 +12,7 @@
     <header>
         <nav>
             <div class="nav-container">
-                <a href="index.html" class="logo">Portfolio</a>
+                <a href="index.html" class="logo">BC</a>
                 <div class="nav-right">
                     <ul class="nav-links">
                         <li><a href="projects.html">Projects</a></li>
