updated to add progress bar and mute button

--- a/Soundboard/soundboard.html
+++ b/Soundboard/soundboard.html
@@ -30,9 +30,10 @@
           <span id="volume-value" class="volume-value">80%</span>
         </div>
 
-        <!-- Stop button -->
-        <button id="stop-btn" class="stop-btn">
-          <span>&#9632;</span> Stop
+        <!-- Mute toggle button -->
+        <button id="mute-btn" class="mute-btn">
+          <span class="mute-icon">🔊</span>
+          <span class="mute-label">Mute</span>
         </button>
 
         <!-- View toggle -->
@@ -52,7 +53,7 @@
 
         <!-- Theme toggle -->
         <button id="theme-toggle" class="theme-toggle" title="Toggle theme">
-          &#9728;&#65039;
+          <span class="theme-icon">🌙</span>
         </button>
       </div>
     </header>
@@ -110,7 +111,7 @@
       <p>Click a player button or use keyboard shortcuts to play walk-up music.</p>
       <div class="shortcuts">
         <span><kbd>1</kbd>-<kbd>0</kbd> Play player 1-10</span>
-        <span><kbd>Space</kbd> or <kbd>Esc</kbd> Stop audio</span>
+        <span><kbd>M</kbd> Toggle mute</span>
       </div>
     </footer>
   </div>
