--- a/Softball/soundboard.html
+++ b/Softball/soundboard.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Baseball Walk-Up Music Soundboard - Play audio clips for player at-bats">
   <meta name="theme-color" content="#1a1a2e">
-  <title>Bunt Cakes Manager</title>
+  <title>Bunt Cakes Dashboard</title>
 
   <!-- Favicon (optional - add your own) -->
   <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>⚾</text></svg>">
@@ -19,7 +19,7 @@
     <header class="header">
       <div class="header-title">
         <span class="icon"></span>
-        <h1>Bunt Cakes Manager</h1>
+        <h1>Bunt Cakes Dashboard</h1>
       </div>
 
       <div class="controls">
